# GW2-Nexus---Loot-Tracker

./: .gitignore  CMakeLists.txt  README.md  release.sh
.github/workflows/: build.yml
src/: GW2Api.cpp  GW2Api.h  LootSession.cpp  LootSession.h  SessionHistory.cpp  SessionHistory.h  Settings.cpp  Settings.h  Shared.cpp  Shared.h  TrackingFilter.cpp  TrackingFilter.h  UI.cpp  UI.h  entry.cpp  resources.rc.in
